changed color on overlay fixed spacing on text

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -45,14 +45,16 @@ header.masthead {
 header.masthead .masthead-content .masthead-heading {
   text-align: center;
   font-family: 'Montserrat', sans-serif;
-  font-size: 80px;
+  font-size: 120px;
   color: white;
   font-weight: bold;
+  padding-bottom: 15px;
 }
 
 header.masthead .masthead-content .masthead-subheading {
   font-size: 30px;
   font-weight: medium;
+  padding-bottom: 20px;
 }
 
 .video
